[package]
name = "nabob-indexer"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
nabob-api = { workspace = true }
nabob-api-types = { workspace = true }
nabob-bitvec = { workspace = true }
nabob-config = { workspace = true }
nabob-logger = { workspace = true }
nabob-mempool = { workspace = true }
nabob-metrics-core = { workspace = true }
nabob-runtimes = { workspace = true }
nabob-storage-interface = { workspace = true }
nabob-types = { workspace = true }
async-trait = { workspace = true }
bcs = { workspace = true }
bigdecimal = { workspace = true }
chrono = { workspace = true }
diesel = { workspace = true, features = [
    "chrono",
    "postgres",
    "r2d2",
    "numeric",
    "serde_json",
] }
diesel_migrations = { workspace = true }
field_count = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
nabob-api-test-context = { workspace = true }
