[package]
name = "nabob-inspection-svc"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
nabob-build-info = { workspace = true }
nabob-config = { workspace = true }
nabob-data-cli = { workspace = true }
nabob-logger = { workspace = true }
nabob-metrics-core = { workspace = true }
nabob-network = { workspace = true }
nabob-runtimes = { workspace = true }
nabob-storage-interface = { workspace = true }
nabob-storage-cli = { workspace = true }
nabob-telemetry-cli = { workspace = true }
nabob-time-svc = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
once_cell = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
nabob-time-svc = { workspace = true, features = ["testing"] }
assert_approx_eq = { workspace = true }
rusty-fork = { workspace = true }
