[package]
name = "nabob-network-benchmark"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
nabob-config = { workspace = true }
nabob-logger = { workspace = true }
nabob-metrics-core = { workspace = true }
nabob-network = { workspace = true }
nabob-time-svc = { workspace = true }
nabob-types = { workspace = true }
async-channel = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
