[package]
name = "nabob-network-builder"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
nabob-channels = { workspace = true }
nabob-config = { workspace = true }
nabob-crypto = { workspace = true }
nabob-event-notify = { workspace = true }
nabob-logger = { workspace = true }
nabob-netcore = { workspace = true }
nabob-network = { workspace = true }
nabob-network-discovery = { workspace = true }
nabob-time-svc = { workspace = true }
nabob-types = { workspace = true }
bcs = { workspace = true }
futures = { workspace = true }
maplit = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
