[package]
name = "nabob-node"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
nabob-admin-svc = { workspace = true }
nabob-api = { workspace = true }
nabob-backup-svc = { workspace = true }
nabob-build-info = { workspace = true }
nabob-cached-packages = { workspace = true }
nabob-channels = { workspace = true }
nabob-config = { workspace = true }
nabob-consensus = { workspace = true }
nabob-consensus-notify = { workspace = true }
nabob-crash-handler = { workspace = true }
nabob-crypto = { workspace = true }
nabob-data-cli = { workspace = true }
nabob-data-stream-svc = { workspace = true }
nabob-db = { workspace = true }
nabob-db-indexer = { workspace = true }
nabob-dkg-runtime = { workspace = true }
nabob-event-notify = { workspace = true }
nabob-executor = { workspace = true }
nabob-framework = { workspace = true }
nabob-genesis = { workspace = true }
nabob-indexer = { workspace = true, optional = true }
nabob-indexer-grpc-fullnode = { workspace = true }
nabob-indexer-grpc-table-info = { workspace = true }
nabob-infallible = { workspace = true }
nabob-inspection-svc = { workspace = true }
nabob-jwk-consensus = { workspace = true }
nabob-logger = { workspace = true, features = ["node-identity"] }
nabob-mempool = { workspace = true }
nabob-mempool-notify = { workspace = true }
nabob-network = { workspace = true }
nabob-network-benchmark = { workspace = true }
nabob-network-builder = { workspace = true }
nabob-node-identity = { workspace = true }
nabob-monitor-cli = { workspace = true }
nabob-monitor-svc = { workspace = true }
nabob-monitor-types = { workspace = true }
nabob-runtimes = { workspace = true }
nabob-state-svc = { workspace = true }
nabob-storage-interface = { workspace = true }
nabob-storage-cli = { workspace = true }
nabob-storage-notify = { workspace = true }
nabob-storage-svc = { workspace = true }
nabob-storage-types = { workspace = true }
nabob-telemetry-cli = { workspace = true }
nabob-temppath = { workspace = true }
nabob-time-svc = { workspace = true }
nabob-types = { workspace = true }
nabob-validator-txpool = { workspace = true }
nabob-vm = { workspace = true }
nabob-vm-environment = { workspace = true }
bcs = { workspace = true }
clap = { workspace = true }
either = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
rlimit = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
ureq = { workspace = true }
url = { workspace = true }

[target.'cfg(unix)'.dependencies]
jemallocator = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
rstack-self = { workspace = true }

[features]
assert-private-keys-not-cloneable = ["nabob-crypto/assert-private-keys-not-cloneable"]
check-vm-features = []
consensus-only-perf-test = ["nabob-executor/consensus-only-perf-test", "nabob-mempool/consensus-only-perf-test", "nabob-db/consensus-only-perf-test"]
default = []
failpoints = ["fail/failpoints", "nabob-consensus/failpoints", "nabob-executor/failpoints", "nabob-mempool/failpoints", "nabob-api/failpoints", "nabob-config/failpoints"]
indexer = ["nabob-indexer"]
tokio-console = ["nabob-logger/tokio-console", "nabob-config/tokio-console"]
smoke-test = ["nabob-jwk-consensus/smoke-test", "nabob-dkg-runtime/smoke-test"]

[package.metadata.cargo-machete]
ignored = ["nabob-crypto"]
