[package]
name = "nabob-profiler"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
regex = { workspace = true }

[target.'cfg(unix)'.dependencies]
pprof = { workspace = true }
backtrace = { workspace = true }
jemallocator = { workspace = true }
jemalloc-sys = { workspace = true }

