[package]
name = "nabob-reliable-broadcast"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
nabob-bounded-executor = { workspace = true }
nabob-consensus-types = { workspace = true }
nabob-enum-convert-derive = { workspace = true }
nabob-infallible = { workspace = true }
nabob-logger = { workspace = true }
nabob-time-svc = { workspace = true }
nabob-types = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
claims = { workspace = true }
futures = { workspace = true }
futures-channel = { workspace = true }
tokio = { workspace = true }
tokio-retry = { workspace = true }

[dev-dependencies]
nabob-consensus-types = { workspace = true, features = ["fuzzing"] }
nabob-time-svc = { workspace = true, features = ["testing"] }

[features]
default = []
