[package]
name = "nabob-safety-rules"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
nabob-config = { workspace = true }
nabob-consensus-types = { workspace = true }
nabob-crypto = { workspace = true }
nabob-global-constants = { workspace = true }
nabob-infallible = { workspace = true }
nabob-logger = { workspace = true }
nabob-metrics-core = { workspace = true }
nabob-secure-net = { workspace = true }
nabob-secure-storage = { workspace = true }
nabob-types = { workspace = true }
nabob-vault-cli = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
proptest = { workspace = true, optional = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
nabob-config = { workspace = true, features = ["fuzzing"] }
nabob-consensus-types = { workspace = true, features = ["fuzzing"] }
nabob-proptest-helpers = { workspace = true }
nabob-secure-storage = { workspace = true, features = ["testing"] }
claims = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
rusty-fork = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
fuzzing = ["nabob-consensus-types/fuzzing", "nabob-config/fuzzing", "proptest"]
testing = ["nabob-secure-storage/testing"]
