[package]
name = "nabob-storage-cli"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
nabob-config = { workspace = true }
nabob-network = { workspace = true }
nabob-storage-types = { workspace = true }
thiserror = { workspace = true }
