[package]
name = "nabob-storage-notify"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
nabob-channels = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
nabob-crypto = { workspace = true }
claims = { workspace = true }
tokio = { workspace = true }
