[package]
name = "nabob-storage-types"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
nabob-compression = { workspace = true }
nabob-config = { workspace = true }
nabob-crypto = { workspace = true }
nabob-time-svc = { workspace = true }
nabob-types = { workspace = true }
bcs = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
nabob-time-svc = { workspace = true, features = ["testing"] }
claims = { workspace = true }
proptest = { workspace = true }
rand = { workspace = true }
