[package]
name = "nabob-system-utils"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
version.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-mutex = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
lazy_static = { workspace = true }
mime = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nabob-profiler = { workspace = true }
pprof = { workspace = true }
regex = { workspace = true }
rstack-self = { workspace = true }
